[project]
name = "ucar"
version = "0.1.0"
description = ""
authors = [
    {name = "wukker",email = "mmdems69@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "uuid6 (>=2025.0.1,<2026.0.0)",
    "fastapi-error-map (>=0.9.8,<0.10.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "yarl (>=1.22.0,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "ujson (>=5.11.0,<6.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
